# a-vert

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
a_vert/: __init__.py  config.py  embedding_tools.py  grouping.py  logger.py  processing.py  prompts_general.py
examples/: README.md  docker-compose.yaml  example.env  instructions.example.json
lm-eval_tasks/: README.md
lm-eval_tasks/babi_tasks/: _generate_configs.py
lm-eval_tasks/babi_tasks/chat_zero-shot_a-vert/: _babi.yaml  utils.py
lm-eval_tasks/babisteps/chat_zero-shot_a-vert/: babisteps.yaml  utils.py
lm-eval_tasks/bbh_split/chat_zero-shot_a-vert/: utils.py
lm-eval_tasks/explore_tom/chat_zero-shot_a-vert/: _default_template_yaml  exploretom.yaml  exploretom_level_1.yaml  exploretom_level_2.yaml  exploretom_non_tom.yaml  utils.py
lm-eval_tasks/gpqa_subtask/chat_zero-shot_a-vert/: utils.py
lm-eval_tasks/gsm8k_chat/: utils.py
lm-eval_tasks/leaderboard_mmlu_pro_test/: leaderboard_mmlu_pro_test.yaml
lm-eval_tasks/leaderboard_mmlu_pro_test/mmlu_pro_test/: mmlu_pro_test.yaml
lm-eval_tasks/leaderboard_mmlu_pro_test/mmlu_pro_test_chat/: mmlu_pro_test_chat.yaml  utils.py
lm-eval_tasks/mmlu_chat/chat_zero-shot_a-vert/: _default_template_yaml  utils.py
lm-eval_tasks/mmlu_pro_categories/: _generate_configs.py
lm-eval_tasks/mmlu_pro_categories/chat_zero-shot_a-vert/: utils.py
lm-eval_tasks/reasoning_gym/chat_zero-shot_a-vert/: _default_template_yaml  utils.py
notebooks/: README.md  process_results.ipynb  tag_tool.ipynb
sample_tasks/: README.md
sample_tasks/babi_tasks/chat_zero-shot_a-vert/: _default_template_yaml  utils.py
src/: processing.py  prompts_general.py
testing/: babi.py  babisteps.py  gpqa.py  gsm8k.py  mmlu.py  test_tools.py
