[project]
name = "a-vert"
version = "0.1.0"
description = "Agnostic-Verification with Embedding Ranking Tiers"
authors = [
    {name = "Ramiro Rodriguez Colmeiro",email = "rawthil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (==2.2)",
    "requests (>=2.32.4,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
tqdm = "^4.67.1"
pandas = "^2.3.2"
seaborn = "^0.13.2"
scikit-learn = "1.7.2"


[tool.poetry.group.tqdm.dependencies]
ipykernel = "^6.30.1"

